feat: update version to 0.4.2 and adjust dependency version for utils

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@helios-starling/helios",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A WebSocket server implementation for Bun with method handling, reconnection support, and state persistence",
   "main": "src/index.js",
   "exports": {
@@ -23,7 +23,7 @@
     "generate-types": "bunx -p typescript tsc src/**/*.js --declaration --allowJs --emitDeclarationOnly --outDir types"
   },
   "dependencies": {
-    "@helios-starling/utils": "0.4.1",
+    "@helios-starling/utils": "^0.4.0",
     "@killiandvcz/buffer": "^1.0.2",
     "@killiandvcz/pulse": "^1.0.2",
     "jose": "^5.9.6",
